--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-# Python Packaging Authority (PyPA)'s guide on requirement files: https://pip.pypa.io/en/stable/user_guide/#requirements-files
+keras==2.2.4
+nltk==3.4
+scikit-learn==0.20.2
+tensorflow==1.12.0
